deployment/container/openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-demo
  labels:
    app.kubernetes.io/part-of: bank-demo
